--- a/src/main/resources/com/vahan/web/pages/HomePage.html
+++ b/src/main/resources/com/vahan/web/pages/HomePage.html
@@ -6,5 +6,11 @@
 </head>
 <body>
 <div wicket:id = "hello"></div>
+<br>
+<form wicket:id="form">
+    <input type="text" wicket:id="username"><br>
+    <input type="password" wicket:id="password"><br>
+    <input type="submit" wicket:id="submit">
+</form>
 </body>
 </html>
